# raylibtemplate

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cgltf.h.2B04E0AC786440DA.idx  cgltf.h.A603D95522229D16.idx  cocoa_init.m.2178BF465A1D15E6.idx  cocoa_init.m.A448C44672AAA054.idx  cocoa_joystick.h.625A45CA266DF20B.idx  cocoa_joystick.h.713C1F6166EDB96A.idx  cocoa_joystick.m.4E154424BA057100.idx  cocoa_joystick.m.D3374819CEF3B8EF.idx  cocoa_monitor.m.02A5A417E64DBCD0.idx  cocoa_monitor.m.A53771131881694E.idx  cocoa_platform.h.5DC8AD2AD3D92A9C.idx  cocoa_platform.h.7D38C266F4C2E85E.idx  cocoa_time.c.707C238CAC67ADB5.idx  cocoa_time.c.FE0C1169FAB1A1FE.idx  cocoa_time.h.7634EEF259895A06.idx  cocoa_time.h.86D1717818A37275.idx  cocoa_window.m.5187C8155DB4152F.idx  cocoa_window.m.6CB03D85E06E2FEF.idx  config.h.3246295CC087DAD1.idx  config.h.C53AB851BBC471BA.idx  context.c.36D4F9036EE138FD.idx  context.c.CEEA65EEB4A58842.idx  dr_mp3.h.310676DE4F7688E4.idx  dr_mp3.h.4F0D425FDB547597.idx  dr_wav.h.AC3CFAE941592D2C.idx  dr_wav.h.C14FDC9617A35E95.idx  egl_context.c.3A0BACC1BD3A3A1B.idx  egl_context.c.C6CB03220B534165.idx  glad.h.9C5CC2B848E60F88.idx  glad.h.B0FBDBF9C2CC0A20.idx  glfw3.h.B682B6D406F745CC.idx  glfw3.h.D7A9A9D7C9DB133B.idx  glfw3native.h.4C11D60BE5248DD3.idx  glfw3native.h.95FBB955E9214276.idx  init.c.886CB4F5578051AB.idx  init.c.A01F3D8038A87407.idx  input.c.A8E313B9BA8D4511.idx  input.c.AEC64AB87362B509.idx  internal.h.2A915C97AC1EAE9C.idx  internal.h.321FE5728245BF83.idx  (+108 more)
src/: main.c
